5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4431/executions/1771_2390.log
== TEST (2019-05-23 20:18:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
f=1
t=0
while(len(x)>z):
	n=x[z]-y[z]
	q=x[f]-y[f]
	if(q>n):
		t=q
		f=f+1
		z=z+1
	else:
		t=n
		f=f+1
		z=z+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:19:45) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
f=1
t=0
q=0
while(len(x)>z):
	n=x[z]-y[z]
	q=x[f]-y[f]
	if(q>n):
		t=q
		f=f+1
		z=z+1
	else:
		t=n
		f=f+1
		z=z+1
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:21:18) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
f=1
t=0
q=0
while(len(x)>z):
	n=x[z]-y[z]
	z=z+1
	q=x[f]-y[f]
	if(q>n):
		t=q
		f=f+1
	else:
		t=n
		f=f+1
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:21:37) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
f=1
t=0
q=0
while(len(x)>z):
	n=x[z]-y[z]
	z=z+1
	q=x[z]-y[z]
	if(q>n):
		t=q
		f=f+1
	else:
		t=n
		f=f+1
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:25:34) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	t=x[z]-y[z]
	print(t)
	z=z+1
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:25:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	t=x[z]-y[z]
	print(t)
	z=z+1
	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:27:51) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	t=x[z]-y[z]
	if(len(x)==1):
		print("1")
	else:
		print(t)
	   z=z+1
	
	
		
		
-- ERROR:
File "XXXX", line 11
    z=z+1
        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:27:59) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	t=x[z]-y[z]
	if(len(x)==1):
		print("1")
	else:
		print(t)
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:28:09) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	t=x[z]-y[z]
	if(len(x)==1):
		print("1")
		z=z+1
	else:
		print(t)
		z=z+1
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:37:56) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=x[j]-y[j]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(qq)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:38:01) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=x[j]-y[j]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:41:56) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=(x[j])-(y[j])
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:42:07) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=(x[j])-(y[j])
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:43:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
print(x[j])
while(len(x)>z):
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:43:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
print(x[j])
while(len(x)>z):
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:47:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
print(x[j])
while(len(x)>z):
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:47:41) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=0
q=0
j=1
print(x[j])
while(len(x)>z):
	t=x[z]-y[z]
	n=x[j]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:48:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
n=1
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=x[j]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:48:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	n=x[j]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:48:53) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
j=1
while(len(x)>z):
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:49:11) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
j=1
while(len(x)>z):
	n=x[j]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:49:24) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
j=1
while(len(x)>z):
	n=x[1]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:49:54) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:50:12) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]-x[u]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		j=j+1
	else:
		q=j
		j=j+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:50:43) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]-x[u]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		u=u+1
	else:
		q=u
		u=u+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:51:00) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]-y[u]
	t=x[z]-y[z]
	if(t>n):
		q=z
		z=z+1
		u=u+1
	else:
		q=u
		u=u+1
		z=z+1
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:51:42) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]-y[u]
	t=x[z]-y[z]
	if(t>n):
		q=z
	else:
		q=u
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:51:55) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
q=0
u=1
while(len(x)>z):
	n=x[u]-y[u]
	z=z+1
	t=x[z]-y[z]
	if(t>n):
		q=z
	else:
		q=u
print(q)		
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:03:23) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	m=x[z]-y[z]
	n=x[z+1]-y[z+1]
	print(m,n)
	z=z+1
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:03:54) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	m=x[z]-y[z]
	n=x[1]-y[1]
	print(m,n)
	z=z+1
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:05:57) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	m=x[z]-y[z]
	print(m)
	z=z+1
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:05:57) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	m=x[z]-y[z]
	print(m)
	z=z+1
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:06:06) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
while(len(x)>z):
	m=x[z]-y[z]
	print(m)
	z=z+1
		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:07:15) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x))
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
print(m)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:07:35) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
print(m)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:07:51) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
print(m)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:09:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):
	print("ta indo certo")
	t=t+1

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 21:10:24) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):	
	t=t+1
print(t)	

		
		
		

	
	
		
		
-- EXECUTION TIME:
0.333734
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0]
10
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
[0 0 0 0 0 0 0 0 0 0 0 0]
9
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:10:25) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)
print(m)
while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):	
	t=t+1
print(t)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 21:10:47) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)

while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):	
	t=t+1
print(t+1)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 21:11:13) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)

while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):	
	t=t+1
print(t+1)	

		
		
		

	
	
		
		
-- EXECUTION TIME:
0.51001
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-27 10:35:38) 
-- CODE:
from numpy import*
x=array(eval(input("Digite a quantidade de presentes por mes: ")))
y=array(eval(input("Digite a quantidade de faltantes por mes: ")))
z=0
m=zeros(len(x),dtype=int)

while(len(x)>z):
	m[z]=x[z]-y[z]
	z=z+1
t=0
while(m[t]!=max(m)):	
	t=t+1
print(t+1)	

		
		
		

	
	
		
		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
